base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-maestro-base
